--- a/_config.yml
+++ b/_config.yml
@@ -44,17 +44,19 @@ post_asset_folder: false
 relative_link: false
 future: true
 syntax_highlighter: highlight.js
+# 我的配置
 highlight:
-  line_number: true
-  auto_detect: false
+  enable: false
+  line_number: false
+  auto_detect: true
   tab_replace: ''
   wrap: true
-  hljs: false
+  hljs: true
 prismjs:
+  enable: false
   preprocess: true
   line_number: true
   tab_replace: ''
-
 # Home page setting
 # path: Root path for your blogs index page. (default = '')
 # per_page: Posts displayed per page. (0 = disable pagination)
@@ -84,7 +86,7 @@ updated_option: 'mtime'
 
 # Pagination
 ## Set per_page to 0 to disable pagination
-per_page: 10
+per_page: 9
 pagination_dir: page
 
 # Include / Exclude file(s)
@@ -96,7 +98,7 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: landscape
+theme: Quiet
 
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
