--- a/_config.yml
+++ b/_config.yml
@@ -100,7 +100,8 @@ ignore:
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
 theme: Quiet
-
+plugins:
+  - hexo-renderer-less
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
