--- a/themes/Quiet/_config.yml
+++ b/themes/Quiet/_config.yml
@@ -1,17 +1,17 @@
 # 网站标题
-title: Hexo主题-Quiet主题-Hexo扁平化主题安装
+title: 轩的博客
 # 网站标题后缀
-suffix: Quiet
+suffix: xuan
 # 作者名称
 author: xuan
 # 网站关键字
-keyword: hexo主题,hexo扁平化主题,Quiet主题
+keyword: 技术分享，日常分享
 #false是否开启文章背景图显示(随机图片)
 is_article_img: true  
 # 网站描述
 web_description: 描述
 # 首页文章布局 默认 'card' 可选择 'block-card'
-home_layout: card
+home_layout: block-card
 # 导航名称
 menus_title:
   home: 首页
@@ -30,31 +30,31 @@ menus:
   about: /about
   
 # logo
-logo: /image/logo.png
+logo: /image/xuanxie.png
 # 网页标签上那个小图标 一定要用本地存储
-icon: /image/favicon.ico
+icon: /image/xuanxie.png
 # 每个页面的展示的图标和一句话
 headers:
     home: {
       message: "没什么想说的？",
-      icon: "/image/logo.png"
+      icon: "/image/xuanxie.png"
     }
     archives: {
       # 这里会替换掉两个变量{ year 年，number 总数 } 当然也可以不写这两个变量
       message: "居然用了 year 年一共才写了 number 篇文章!",
-      icon: "https://cdn.jsdelivr.net/gh/duogongneng/MyBlogImg/imgicon-remixicon.svg"
+      icon: "/image/可达鸭.svg"
     }
     tags: {
       message: "这里是一些展示的标签",
-      icon: "https://cdn.jsdelivr.net/gh/duogongneng/MyBlogImg/imgtags.svg"
+      icon: "/image/仓鼠.svg"
     }
     links: {
       message: "我和我的小伙伴们",
-      icon: "https://cdn.jsdelivr.net/gh/duogongneng/MyBlogImg/imga20r7-cftji.svg"
+      icon: "/image/柴犬.svg"
     }
     categories: {
       message: "文章分类",
-      icon: "https://cdn.jsdelivr.net/gh/duogongneng/MyBlogImg/imgblogmyCategory.svg"
+      icon: "/image/更多犬种.svg"
     }
 
 # 网页访问统计
